@@ -2,6 +2,8 @@ v7.13.0
   - Fix: No runner notification can see managers only
   - Fix: lint with relative subpath
   - Update web hook example
+  - Improved Lint stability
+  - Add one more validation rule for .gitlab-ci.yml
 
 v7.12.1
   - Runner without tag should pick builds without tag only
